[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/yaslı_adam2.png" type="Texture" id=1]
[ext_resource path="res://assets/parsomen.png" type="Texture" id=2]
[ext_resource path="res://assets/yaslı_adam3.png" type="Texture" id=3]
[ext_resource path="res://Dialogbox.gd" type="Script" id=4]
[ext_resource path="res://YaslıAdam.gd" type="Script" id=5]
[ext_resource path="res://assets/next-indicator.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 287.289

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/Ranchers-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = SubResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "newindicator"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 237.856, 141.581 ), Vector2( 237.856, 141.581 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Yaslı" type="Node2D"]

[node name="YaslıAdam" type="KinematicBody2D" parent="."]
position = Vector2( 299.263, 544.51 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="YaslıAdam"]
frames = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="YaslıAdam"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="YaslıAdam/Area2D"]
shape = SubResource( 2 )

[node name="Control" type="Control" parent="."]
margin_left = -68.0
margin_top = 556.0
margin_right = -28.0
margin_bottom = 596.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogbox" type="Control" parent="Control"]
margin_left = -214.018
margin_top = -506.572
margin_right = 906.986
margin_bottom = -258.572
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/Dialogbox"]
margin_right = 1175.0
margin_bottom = 263.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Dialogbox"]
margin_left = 135.0
margin_top = 83.0
margin_right = 1055.0
margin_bottom = 244.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.341176, 0.227451, 0.0745098, 1 )
bbcode_text = "asasas ass ss as "
text = "asasas ass ss as "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nextindicator" type="Sprite" parent="Control/Dialogbox"]
position = Vector2( 557.431, 210.608 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Dialogbox/nextindicator"]
anims/newindicator = SubResource( 5 )

[node name="Tween" type="Tween" parent="Control/Dialogbox"]
[connection signal="dialog" from="YaslıAdam" to="Control/Dialogbox" method="_on_YaslAdam_dialog"]
[connection signal="body_entered" from="YaslıAdam/Area2D" to="YaslıAdam" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="YaslıAdam/Area2D" to="YaslıAdam" method="_on_Area2D_body_exited"]
[connection signal="script_changed" from="Control/Dialogbox" to="YaslıAdam" method="_on_Dialogbox_script_changed"]
[connection signal="tween_completed" from="Control/Dialogbox/Tween" to="Control/Dialogbox" method="_on_Tween_tween_completed"]
